--- a/css/styles-90.css
+++ b/css/styles-90.css
@@ -60,11 +60,11 @@
   margin-left: 0px;
 }
 
-.full-width {
+/* .full-width { */
   /* width: 100%;
   height: auto;
   margin: 0; */
-}
+/* } */
 
 .bg {
   width: 100%;
@@ -227,9 +227,9 @@
 
 
 /* figures */
-.figure {
+/* .figure { */
   /* margin-bottom: 30px; */
-}
+/* } */
 .figure-caption,
 .figure-caption a {
   color: #a2a7aa;
@@ -274,17 +274,17 @@ button, .btn, .btn a {
 }
 
 /* remove default blue outline on selected states */
-button,
+/* button,
 button:active,
 button:focus,
 button:hover,
 .btn,
 .btn:active,
 .btn:focus,
-.btn:hover{
+.btn:hover{ */
     /* outline: !important; */
     /* box-shadow: none !important; */
-}
+/* } */
 
 
 /* action-button */
@@ -581,7 +581,7 @@ p {
 .faq-question {
   font-weight: 700;
   margin-top: 35px;
-  font-size: 17px; ``
+  font-size: 17px; 
 }
 /* fancy */
 .r90-neg {
@@ -651,6 +651,9 @@ p {
 .dinnerform .btn-outline-primary:hover,
 .dinnerform .btn-outline-primary:active, 
 .dinnerform .btn-outline-primary:focus, 
+.dinnermenu .btn-outline-primary:hover,
+.dinnermenu .btn-outline-primary:active, 
+.dinnermenu .btn-outline-primary:focus, 
 .btn-outline-primary:hover,
 .btn-outline-primary:active, 
 .btn-outline-primary:focus, 
@@ -797,7 +800,7 @@ button,
   font-weight: 700;
   letter-spacing: .05em;
   margin-top: 0;
-  font-size:
+  /* font-size: ; */
 }
 
 
